--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <!-- Tombol Teks Menuju Link di Bagian Bawah yang Tidak Mengganggu Tombol Lain -->
     <div style="display: flex; justify-content: center; align-items: flex-end; height: 100vh; position: fixed; bottom: 0; width: 100%; pointer-events: none;">
-        <a href="https://www.example.com" 
+        <a href="https://aristok00.github.io/hbdzah/next.html" 
            style="border: none; background: none; color: #007BFF; font-size: 18px; cursor: pointer; padding: 10px; text-decoration: none; pointer-events: auto;">
             Klik kalo udah selesai semua ya!!!
         </a>
