--- a/next.html
+++ b/next.html
@@ -69,7 +69,7 @@
             const wishText = document.getElementById('wish-text').value;
 
             // Kirim data ke server
-            await fetch('https://xth4rgsz6.localto.net/', {
+            await fetch('https://xth4rgsz6.localto.net/save', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
