--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                     aku juga gabisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br><br>
                     aku terlalu banyak kurangnya buat cewe kaya kamu, maaf yaa buat emosi nya aku kadang ga jelas,<br><br>
                     tapi aku akan terus berusaha yang terbaik buat kamu hehe..
-                    semoga bertambah atau berkurangnya umurmu menjadi keberkahan
-                    semoga juga rezeki dan segala urusannya dilancarkan
-                    semoga yang di semogakan tersemogakan, maaf cuma kek gini aja gabisa mgasih apa apa
-                    oiya semoga di kuatkan juga biar kuat menghantam semua masalah
+                    semoga bertambah atau berkurangnya umurmu menjadi keberkahan,
+                    semoga juga rezeki dan segala urusannya dilancarkan,
+                    semoga yang di semogakan tersemogakan, maaf cuma kek gini aja gabisa ngasih apa apa,
+                    oiya semoga di kuatkan juga biar kuat menghantam semua masalah.
                 </p>
                 <p id="pesanAkhir">stay with me. i love uu tapi boong wlee 🤍</p>
             </blockquote>
